--- a/russian-travel/blocks/lead/__title/lead__title.css
+++ b/russian-travel/blocks/lead/__title/lead__title.css
@@ -1,27 +1,16 @@
 .lead__title {
     text-align: center;
-    max-width: 77.313%;
+    max-width: 720px;
     margin: 0 auto;
-    font-size: 6em;
+    font-size: 96px;
     font-weight: 900;
-    line-height: 1.0416em;
+    line-height: 100px;
 }
 
-@media (max-width:1024px) {
+@media (min-width:320px) and (max-width:767px) {
     .lead__title {
-        max-width: 81.313%;
-    }
-}
-
-@media (max-width:768px) {
-    .lead__title {
-        max-width: 87.313%;
-    }
-}
-
-@media (max-width:320px) {
-    .lead__title {
-        max-width: 92.313%;
-        font-size: 2.5em;
+        max-width: 288px;
+        font-size: 40px;
+        line-height: 44px;
     }
 }
