--- a/russian-travel/blocks/place/place.css
+++ b/russian-travel/blocks/place/place.css
@@ -1,5 +1,6 @@
 @import url(./__title/place__title.css);
 @import url(./__website/place__website.css);
+@import url(./__description/place__description.css);
 @import url(./__paragraph/place__paragraph.css);
 @import url(./__image/place__image.css);
 @import url(./__url-heading/place__url-heading.css);
@@ -11,7 +12,7 @@
     padding-bottom: 5%;
 }
 
-@media (max-width:320px) {
+@media (min-width:320px) and (max-width:767px) {
     .place {
         grid-template-columns: repeat(1, 1fr);
         grid-template-areas: "title" "image" "text";
