--- a/russian-travel/blocks/cover/__title/cover__title.css
+++ b/russian-travel/blocks/cover/__title/cover__title.css
@@ -1,29 +1,24 @@
     .cover__title {
-        width: 46.612%;
+        max-width: 560px;
         text-align: center;
         padding: 21% 0% 1% 0%;
         margin: 0 auto;
-        font-size: 4.3em;
-    }
-    
-    @media (max-width:1024px) {
-        .cover__title {
-            font-size: 4em;
-            width: 49%;
-        }
+        font-size: 72px;
+        line-height: 76px;
     }
     
     @media (max-width:768px) {
         .cover__title {
-            width: 65%;
             padding: 19% 0% 1% 0%;
         }
     }
     
-    @media (max-width:320px) {
+    @media (min-width:320px) and (max-width:767px) {
         .cover__title {
-            font-size: 2.5em;
-            width: 90%;
+            max-width: 288px;
+            font-size: 32px;
+            line-height: 35px;
+            font-weight: 900;
             padding: 9% 0% 1% 0%;
         }
     }
