--- a/russian-travel/blocks/footer/footer.css
+++ b/russian-travel/blocks/footer/footer.css
@@ -4,19 +4,28 @@
 .footer {
     display: flex;
     flex-direction: row;
-    width: 90%;
+    width: 1184px;
     margin: 0 auto;
     padding: 0 0 2% 0;
 }
 
-@media (max-width:768px) {
+@media (max-width:1024px) {
     .footer {
-        width: 96%;
+        max-width: 928px;
     }
 }
 
-@media (max-width:320px) {
+@media (max-width:768px) {
     .footer {
+        max-width: 720px;
+    }
+}
+
+@media (min-width:320px) and (max-width:767px) {
+    .footer {
+        max-width: 186px;
+        margin: 0;
+        padding-left: 5%;
         display: flex;
         flex-direction: column;
         padding-bottom: 3%;
