--- a/russian-travel/blocks/header/__lang-link/_no-selected/header__lang-link_no-selected.css
+++ b/russian-travel/blocks/header/__lang-link/_no-selected/header__lang-link_no-selected.css
@@ -2,3 +2,9 @@
     text-decoration: none;
     padding-left: 1.5%;
 }
+
+@media (max-width:320px) {
+    .header__lang-link_no-selected {
+        left: 14.5%;
+    }
+}
