--- a/russian-travel/blocks/header/__lang-link/_selected/header__lang-link_selected.css
+++ b/russian-travel/blocks/header/__lang-link/_selected/header__lang-link_selected.css
@@ -9,8 +9,8 @@
     }
 }
 
-@media(max-width:320px) {
+@media(min-width: 320px) and (max-width:767px) {
     .header__lang-link_selected {
-        padding-left: 30%;
+        padding-left: 25%;
     }
 }
