--- a/russian-travel/blocks/intro/__text/intro__text.css
+++ b/russian-travel/blocks/intro/__text/intro__text.css
@@ -1,13 +1,19 @@
-.intro__text {
-    width: 89.845%;
-    font-size: 1em;
-    line-height: 1.625;
-    margin: 0;
-    padding-bottom: 4.167%;
-}
-
-@media (max-width:768px) {
     .intro__text {
-        font-size: 1em;
+        max-width: 690px;
+        font-size: 16px;
+        line-height: 26px;
+        margin: 0;
+        padding-bottom: 4.167%;
     }
-}
+    
+    @media (max-width:768px) {
+        .intro__text {
+            max-width: 720px;
+        }
+    }
+    
+    @media (min-width:320px) and (max-width:767px) {
+        .intro__text {
+            max-width: 288px;
+        }
+    }
