--- a/russian-travel/blocks/lead/__caption/lead__caption.css
+++ b/russian-travel/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,7 @@
 .lead__caption {
     margin: 0;
-    line-height: 2;
-    font-size: 0.8em;
+    font-size: 10px;
+    line-height: 14px;
     text-transform: uppercase;
 }
 
