--- a/russian-travel/blocks/lead/lead.css
+++ b/russian-travel/blocks/lead/lead.css
@@ -6,12 +6,24 @@
     display: flex;
     flex-direction: column;
     padding-top: 4%;
-    width: 80%;
+    max-width: 984px;
     margin: 0 auto;
+}
+
+@media (max-width:1024px) {
+    .lead {
+        max-width: 928px;
+    }
 }
 
 @media (max-width:768px) {
     .lead {
-        width: 100%;
+        max-width: 768px;
+    }
+}
+
+@media (max-width:320px) {
+    .lead {
+        max-width: 320px;
     }
 }
