--- a/russian-travel/blocks/page/page.css
+++ b/russian-travel/blocks/page/page.css
@@ -2,7 +2,7 @@
     min-width: 320px;
     max-width: 1280px;
     margin: 0 auto;
-    font-family: 'Inter';
+    font-family: 'Inter', 'Arial', sans-serif;
     color: #ffffff;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
