--- a/russian-travel/blocks/photo-grid/__item/photo-grid__item.css
+++ b/russian-travel/blocks/photo-grid/__item/photo-grid__item.css
@@ -14,7 +14,7 @@
     }
 }
 
-@media (max-width:320px) {
+@media (min-width:320px) and (max-width:767px) {
     .photo-grid__item {
         max-width: 288px;
         margin: 0 auto;
