--- a/russian-travel/blocks/place/__image/place__image.css
+++ b/russian-travel/blocks/place/__image/place__image.css
@@ -1,16 +1,22 @@
-    .place__image {
-        grid-area: image;
-        width: 90%;
-    }
-    
-    @media (max-width:768px) {
-        .place__image {
-            width: 95%;
-        }
-    }
-    
-    @media (max-width:320px) {
-        .place__image {
-            width: 100%;
-        }
-    }
+ .place__image {
+     grid-area: image;
+     width: 460px;
+ }
+ 
+ @media (max-width:1024px) {
+     .place__image {
+         max-width: 440px;
+     }
+ }
+ 
+ @media (max-width: 768px) {
+     .place__image {
+         max-width: 340px;
+     }
+ }
+ 
+ @media (min-width:320px) and (max-width:767px) {
+     .place__image {
+         width: 100%;
+     }
+ }
