--- a/russian-travel/blocks/place/__paragraph/place__paragraph.css
+++ b/russian-travel/blocks/place/__paragraph/place__paragraph.css
@@ -1,20 +1,22 @@
 .place__paragraph {
-    grid-area: text;
     margin: 0;
-    line-height: 2;
+    font-size: 18px;
+    line-height: 30px;
+    padding-bottom: 24px;
 }
 
 @media (max-width:768px) {
     .place__paragraph {
         padding-left: 2.5%;
-        font-size: 0.8em;
+        font-size: 16px;
+        line-height: 26px;
     }
 }
 
-@media (max-width:320px) {
+@media (min-width:320px) and (max-width:767px) {
     .place__paragraph {
         padding-left: 5%;
-        width: 88%;
+        width: 288px;
         padding-top: 8%;
     }
 }
