--- a/russian-travel/blocks/place/__title/place__title.css
+++ b/russian-travel/blocks/place/__title/place__title.css
@@ -1,15 +1,26 @@
-.place__title {
-    grid-area: title;
-    width: 50%;
-    margin: 0;
-    padding-bottom: 5%;
-    font-weight: 900;
-}
-
-@media (max-width:320px) {
     .place__title {
-        font-size: 2em;
-        width: 90%;
-        margin: 10% 0 7% 5%;
+        grid-area: title;
+        width: 460px;
+        margin: 0;
+        padding-bottom: 5%;
+        font-weight: 900;
     }
-}
+    
+    @media(max-width:1024px) {
+        .place__title {
+            max-width: 440px;
+        }
+    }
+    
+    @media (max-width:768px) {
+        .place__title {
+            max-width: 340px;
+        }
+    }
+    
+    @media (min-width: 320px) and (max-width: 767px) {
+        .place__title {
+            width: 288px;
+            margin: 10% 0 7% 5%;
+        }
+    }
