--- a/russian-travel/blocks/place/__url-heading/place__url-heading.css
+++ b/russian-travel/blocks/place/__url-heading/place__url-heading.css
@@ -1,14 +1,9 @@
 .place__url-heading {
     grid-area: url;
-    font-size: 0.9em;
-    color: #AAAAAA;
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 0.2em;
     grid-row: 2;
-}
-
-@media (max-width:1024px) {
-    .place__url-heading {
-        font-size: 0.85em;
-    }
 }
 
 @media (max-width:768px) {
@@ -17,7 +12,7 @@
     }
 }
 
-@media (max-width:320px) {
+@media (min-width:320px) and (max-width:767px) {
     .place__url-heading {
         display: none;
     }
