--- a/russian-travel/blocks/place/__website/place__website.css
+++ b/russian-travel/blocks/place/__website/place__website.css
@@ -1,8 +1,8 @@
 .place__website {
     grid-area: link;
     color: #ffffff;
-    font-size: 1em;
-    line-height: 1.5;
+    font-size: 18px;
+    line-height: 22px;
     margin: 0;
     padding-top: 7%;
     padding-bottom: 6%;
@@ -12,19 +12,13 @@
     opacity: 0.8;
 }
 
-@media (max-width:1024px) {
-    .place__website {
-        font-size: 0.8em;
-    }
-}
-
 @media (max-width:768px) {
     .place__website {
         padding-left: 2.5%;
     }
 }
 
-@media (max-width:320px) {
+@media (min-width:320px) and (max-width:767px) {
     .place__website {
         display: none;
     }
