--- a/russian-travel/blocks/places/places.css
+++ b/russian-travel/blocks/places/places.css
@@ -1,16 +1,22 @@
 .places {
-    width: 80%;
+    max-width: 984px;
     margin: 0 auto;
+}
+
+@media (max-width:1024px) {
+    .places {
+        max-width: 928px;
+    }
 }
 
 @media (max-width:768px) {
     .places {
-        width: 95.5%;
+        max-width: 720px;
     }
 }
 
 @media (max-width:320px) {
     .places {
-        width: 100%;
+        max-width: 320px;
     }
 }
