--- a/russian-travel/pages/index.css
+++ b/russian-travel/pages/index.css
@@ -1,17 +1,15 @@
+@import url(../vendor/normailze.css);
+@import url(../blocks/body/body.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/title/title.css);
-@import url(../blocks/subtitle/subtitle.css);
 @import url(../blocks/link/link.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/intro/intro.css);
+@import url(../blocks/span/span.css);
 @import url(../fonts/fonts.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/place/place.css);
 @import url(../blocks/footer/footer.css);
-@import url(../vendor/normailze.css);
-html {
-    background-color: #2a2c2f;
-}
