--- a/russian-travel/blocks/cover/cover.css
+++ b/russian-travel/blocks/cover/cover.css
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 1184px;
+    min-height: 200px;
     margin: 5% auto;
     display: flex;
     justify-content: center;
@@ -17,15 +18,15 @@
     }
 }
 
-@media (max-width:320px) {
-    .cover {
-        max-width: 320px;
-    }
-}
-
 @media (max-width:768px) {
     .cover {
         max-width: 768px;
         margin: 10% auto;
+    }
+}
+
+@media (max-width:320px) {
+    .cover {
+        max-width: 320px;
     }
 }
