--- a/russian-travel/blocks/footer/footer.css
+++ b/russian-travel/blocks/footer/footer.css
@@ -1,33 +1,41 @@
-@import url(./__copyright/footer__coopyright.css);
-@import url(./__link/footer__link.css);
-@import url(./__links/footer__links.css);
-.footer {
-    display: flex;
-    flex-direction: row;
-    width: 1184px;
-    margin: 0 auto;
-    padding: 0 0 2% 0;
-}
-
-@media (max-width:1024px) {
+    @import url(./__copyright/footer__coopyright.css);
+    @import url(./__link/footer__link.css);
+    @import url(./__links/footer__links.css);
+    @import url(./__container/footer__container.css);
     .footer {
-        max-width: 928px;
-    }
-}
-
-@media (max-width:768px) {
-    .footer {
-        max-width: 720px;
-    }
-}
-
-@media (min-width:320px) and (max-width:767px) {
-    .footer {
-        max-width: 186px;
-        margin: 0;
-        padding-left: 5%;
         display: flex;
-        flex-direction: column;
-        padding-bottom: 3%;
+        flex-direction: row;
+        max-width: 1184px;
+        margin: 0 auto;
+        justify-content: space-between;
+        padding: 0 0 2% 0;
     }
-}
+    
+    @media (max-width:1024px) {
+        .footer {
+            max-width: 928px;
+        }
+    }
+    
+    @media (min-width:769px) and (max-width:1023px) {
+        .footer {
+            max-width: 95%;
+        }
+    }
+    
+    @media (max-width: 768px) {
+        .footer {
+            max-width: 720px;
+        }
+    }
+    
+    @media (min-width:320px) and (max-width:767px) {
+        .footer {
+            max-width: 186px;
+            margin: 0;
+            padding-left: 5%;
+            display: flex;
+            flex-direction: column;
+            padding-bottom: 3%;
+        }
+    }
