--- a/russian-travel/blocks/lead/__caption/lead__caption.css
+++ b/russian-travel/blocks/lead/__caption/lead__caption.css
@@ -3,6 +3,7 @@
     font-size: 10px;
     line-height: 14px;
     text-transform: uppercase;
+    letter-spacing: 0.15em;
 }
 
 @media (max-width:768px) {
