--- a/russian-travel/blocks/place/__image/place__image.css
+++ b/russian-travel/blocks/place/__image/place__image.css
@@ -1,6 +1,12 @@
  .place__image {
      grid-area: image;
-     width: 460px;
+     max-width: 460px;
+ }
+ 
+ @media (min-width:1025px) and (max-width:1279px) {
+     .place__image {
+         max-width: 95%;
+     }
  }
  
  @media (max-width:1024px) {
@@ -9,14 +15,26 @@
      }
  }
  
- @media (max-width: 768px) {
+ @media (min-width:769px) and (max-width:1023px) {
+     .place__image {
+         max-width: 95%;
+     }
+ }
+ 
+ @media (max-width:768px) {
      .place__image {
          max-width: 340px;
      }
  }
  
- @media (min-width:320px) and (max-width:767px) {
+ @media (min-width:321px) and (max-width:767px) {
      .place__image {
-         width: 100%;
+         max-width: 100%;
+     }
+ }
+ 
+ @media (max-width:320px) {
+     .place__image {
+         max-width: 320px;
      }
  }
