--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,4 +1,4 @@
-@import url(../header/__logo/header__logo.css);
+@import url(./__logo/header__logo.css);
 @import url(./__lang-container/header__lang-container.css);
 @import url(./__lang-link/header__lang-link.css);
 @import url(./__lang-link/_no-selected/header__lang-link_no-selected.css);
